# trading-agents.skill

./: .gitignore  CLAUDE.md  README.md  README_zh.md  SKILL.md  main.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
agents/: bear_researcher.md  bull_researcher.md  fundamental_analyst.md  news_analyst.md  portfolio_manager.md  research_manager.md  risk_manager.md  sentiment_analyst.md  technical_analyst.md  trader.md
evals/: evals.json
scripts/: fetch_market_data.py  technical_indicators.py
tradingagents/: __init__.py  config.py  prompts.py  tools.py  workflow.py
