[project]
name = "trading-agents-skill"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
description = "Multi-agent trading analysis pipeline orchestrating 10+ Claude subagents to simulate professional trading firm analysis, debates, and portfolio decisions"
dependencies = [
    "akshare>=1.18.51",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
